--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "xuzhy",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "poplib": "^0.1.7"
+  }
 }
